vlib/v/checker/tests/use_byte_instead_of_u8_array_param_err.vv
fn takes_bytes(_ []byte) {}

fn main() {}
